[project]
name = "mcp-server-ask-human"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to request and handle human input during task execution"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "automation", "human-in-the-loop"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-ask-human = "mcp_server_ask_human:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
